fix: user details back button, users table more button
feature: add option to delete user in details and to (de)activate user in users table

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -173,7 +173,7 @@
         "actions": "Actions"
       },
       "confirmDeleteTitle": "Deleting user",
-      "confirmDeleteMessage": "Are you sure you want to delete user {{ name }}? This operation cannot be undone.",
+      "confirmDeleteMessage": "Are you sure you want to delete user \"{{ name }}\"? This operation cannot be undone.",
       "deleteSuccessToast": "User successfully deleted.",
       "details": {
         "activate": "Active",
