fix: add missing translations

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -148,7 +148,8 @@
         "subjectCategory": "Category",
         "classroom": "Classroom",
         "teacher": "Lecturer"
-      }
+      },
+      "noItems": "No subjects yet."
     },
     "users": {
       "title": "Users management",
@@ -190,7 +191,7 @@
         "activateSuccessToast": "User \"{{name}}\" activated.",
         "deactivateSuccessToast": "User \"{{name}}\" deactivated."
       },
-      "noItems": "Brak użytkowników"
+      "noItems": "No users yet."
     }
   },
   "404": {
