--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -148,7 +148,8 @@
         "subjectCategory": "Kategoria",
         "classroom": "Klasa",
         "teacher": "Prowadzący"
-      }
+      },
+      "noItems": "Brak przedmiotów."
     },
     "users": {
       "title": "Zarządzanie użytkownikami",
