feature: improve translations in nav, subject categories and classes
rename classroom to class

--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -12,10 +12,12 @@
     }
   },
   "nav": {
-    "home": "Strona główna",
-    "subjects": "Przedmioty",
-    "settings": "Ustawienia",
-    "signOut": "Wyloguj się"
+    "button": {
+      "home": "Strona główna",
+      "subjects": "Przedmioty",
+      "settings": "Ustawienia",
+      "signOut": "Wyloguj się"
+    }
   },
   "subject": {
     "general": {
@@ -105,25 +107,35 @@
     "title": "Ustawienia",
     "categories": {
       "subjectCategories": "Zarządzanie kategoriami przedmiotów",
-      "classrooms": "Zarządzanie klasami",
+      "classes": "Zarządzanie klasami",
       "subjects": "Zarządzanie przedmiotami",
       "users": "Zarządzanie użytkownikami"
     },
     "subjectCategories": {
       "title": "Zarządzanie kategoriami przedmiotów",
-      "addNew": "Dodaj nową kategorię",
-      "categoryNamePlaceholder": "Nazwa kategorii",
-      "create": "Utwórz kategorię",
-      "nameCannotBeEmptyTooltip": "Aby utworzyć kategorię musisz nadać jej nazwę",
-      "nothingToSaveTooltip": "Brak zmian w nazwie kategorii",
-      "createSuccessToast": "Kategoria pomyślnie utworzona.",
-      "updateSuccessToast": "Nazwa kategorii pomyślnie zmieniona.",
-      "deleteSuccessToast": "Kategoria pomyślnie usunięta.",
-      "confirmDeleteTitle": "Potwierdź usunięcie kategorii przedmiotu",
-      "confirmDeleteMessage": "Czy na pewno usunąć kategorię \"{{name}}\"? Tej operacji nie da się cofnąć.",
+      "button": {
+        "add": "Dodaj nową kategorię",
+        "create": "Utwórz kategorię"
+      },
+      "placeholder": {
+        "name": "Nazwa kategorii"
+      },
+      "tooltip": {
+        "nameCannotBeEmpty": "Aby utworzyć kategorię musisz nadać jej nazwę",
+        "nothingToSave": "Brak zmian w nazwie kategorii"
+      },
+      "toast": {
+        "createSuccess": "Kategoria pomyślnie utworzona.",
+        "updateSuccess": "Nazwa kategorii pomyślnie zmieniona.",
+        "deleteSuccess": "Kategoria pomyślnie usunięta."
+      },
+      "confirm": {
+        "deleteTitle": "Potwierdź usunięcie kategorii przedmiotu",
+        "deleteMessage": "Czy na pewno usunąć kategorię \"{{name}}\"? Tej operacji nie da się cofnąć."
+      },
       "noItems": "Brak kategorii przedmiotów."
     },
-    "classrooms": {
+    "classes": {
       "title": "Zarządzanie klasami",
       "addNew": "Dodaj nową klasę",
       "noItems": "Brak istniejących klas.",
@@ -139,14 +151,14 @@
         }
       },
       "edit": {
-        "editThisClassroom": "Modyfikuj tę klasę"
+        "editThisClass": "Modyfikuj tę klasę"
       }
     },
     "subjects": {
       "title": "Zarządzanie przedmiotami",
       "table": {
         "subjectCategory": "Kategoria",
-        "classroom": "Klasa",
+        "class": "Klasa",
         "teacher": "Prowadzący"
       },
       "create": {
@@ -155,7 +167,7 @@
       "noItems": "Brak przedmiotów.",
       "details": {
         "category": "Kategoria",
-        "classroom": "Klasa",
+        "class": "Klasa",
         "teacher": "Prowadzący",
         "students": "Uczniowie",
         "buttons": {
@@ -164,7 +176,7 @@
       },
       "placeholders": {
         "category": "Kategoria przedmiotu...",
-        "classroom": "Klasa...",
+        "class": "Klasa...",
         "teacher": "Nauczyciel prowadzący..."
       },
       "button": {
@@ -236,9 +248,9 @@
     "INCORRECT CREDENTIALS": "Niepoprawny e-mail bądź hasło.",
     "USER_NOT_FOUND": "Nie znaleziono użytkownika.",
     "USER_INACTIVE": "To konto nie jest aktywne.",
-    "CLASSROOM_NAME_REQUIRED": "Nazwa klasy jest wymagana.",
-    "CLASSROOM_NAME_TAKEN": "Ta nazwa klasy jest już zajęta.",
-    "CLASSROOM_TEACHER_REQUIRED": "Wybierz wychowawcę klasy.",
+    "Class_NAME_REQUIRED": "Nazwa klasy jest wymagana.",
+    "Class_NAME_TAKEN": "Ta nazwa klasy jest już zajęta.",
+    "Class_TEACHER_REQUIRED": "Wybierz wychowawcę klasy.",
     "SUBJECT_CATEGORY_REQUIRED": "Wybierz kategorię przedmiotu.",
     "SUBJECT_CLASS_REQUIRED": "Wybierz klasę, której przedmiot dotyczy.",
     "SUBJECT_TEACHER_REQUIRED": "Wybierz nauczyciela prowadzącego przedmiot."
